--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         </activity>
         <activity android:name=".HomeActivity"></activity>
         <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".RecipesActivity"></activity>
+        <activity android:name=".DetailsActivity"/>
     </application>
 
 </manifest>
